# ChangeLog for net-im/pidgin-tlen
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +metadata.xml:
  Added metadata.xml.

  21 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> pidgin-tlen-20081229.ebuild:
  Added missing || die.

  09 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -pidgin-tlen-20080316.ebuild, -pidgin-tlen-20080602.ebuild,
  +pidgin-tlen-20081229.ebuild:
  Bumped. Removed cruft.

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  pidgin-tlen-20080316.ebuild, pidgin-tlen-20080602.ebuild:
  s/make/emake/g

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  -pidgin-tlen-20071216.ebuild, +pidgin-tlen-20080602.ebuild:
  Bumped. Removed oldest version.

  23 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  pidgin-tlen-20071216.ebuild, pidgin-tlen-20080316.ebuild:
  Use emake instead of make. Also removed superfluous variable.

  23 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  pidgin-tlen-20071216.ebuild, pidgin-tlen-20080316.ebuild:
  Upped required pidgin version to 2.3.0. Added ~amd64 keyword.

  08 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +pidgin-tlen-20080316.ebuild:
  Bumped.
