@@ -1,4 +1,6 @@
 DIST pidgin-tlen-20081229.tar.gz 36310 RMD160 9bdbed898b6a75edbe4c528896a5745e240e3da8 SHA1 fb93a504e51ae016672e4c8b0c3449c9246019ac SHA256 fb3dd6e57158dc8d7dea2c54e0e40e33bb3e4e767c7f616440f73f47a1d7ebee
+DIST pidgin-tlen-20090209.tar.gz 38442 RMD160 917f552736917478da0349c2c469c696939ee6fd SHA1 7606401a8b9225036461c61172a58d24290e8f8b SHA256 d787a5160a7a682410d76f7829e9f75af25bc4bdd788e2e2b258c8fb57a97331
 EBUILD pidgin-tlen-20081229.ebuild 599 RMD160 66b6347b6b146f835ce0731f66df7c77e3a34de5 SHA1 c58c3bf2dbd76ddc75f2e9acab425fa0eb44e945 SHA256 ba68bd7267bfeb6becc22684bb6d306044a82fd4f9453b1a9024365c2347bc88
-MISC ChangeLog 1190 RMD160 3aee588bcb84cbe198e254662c4c2b3ba9615cba SHA1 5fe9d54f3ee9f47032881a853540873ec051526a SHA256 4ca30423a33e492b5df944cc90e3c5edfff46eb13466920f129d89864c14b7e7
+EBUILD pidgin-tlen-20090209.ebuild 599 RMD160 10a33e3674088d949cbf408c36b0bd358bb7dcd2 SHA1 bd88f5e8dfa383e2e0b64cedb558f0536ed5010e SHA256 9ac16d48da49d71476ad073651f0f1fc2cc58c5cd568688f22c217cbbc7584a2
+MISC ChangeLog 1300 RMD160 67f25b209df3d175b9ff2a0e2e357515e7e0a378 SHA1 7e086db8738b5cb298a771f9a318c009bcdbc8c2 SHA256 8d09ef181737b5848086dee0d2f6f06feeb76593f0d1d04f199c06d434c64857
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
